# fast-api-auth

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: app.py  database.py  models.py  schemas.py  security.py  settings.py
api/routers/: auth.py  todos.py  users.py
app/: main.py
app/api/: auth.py  users.py
app/core/: config.py  deps.py  security.py
app/db/: session.py
app/models/: user.py
app/schemas/: user.py
app/services/: user_service.py
docs/: code-pt1.md  endpoints.md  jwt.md
src/: app.py  models.py  schemas.py  security.py  settings.py
src/routers/: security.py
v1/: README.md  pyproject.toml  requirements.txt
v1/app/: main.py
v1/app/auth/: dependencies.py  security.py
v1/app/crud/: user.py
v1/app/db/: database.py
v1/app/models/: user.py
v1/app/routers/: auth.py  register.py  users.py
v1/app/schemas/: user.py
